--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.19.2",
     "firebase-admin": "^12.3.1",
     "moment": "^2.30.1",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "sib-api-v3-sdk": "^8.5.0"
   }
 }
